--- a/index.html
+++ b/index.html
@@ -15,37 +15,35 @@
 
   <body>
     <!--This is the header-->
-    <header>
-      <!--Page Logo-->
-      <a class="link-logo" href="./index.html"
-        ><span class="web-logo">WEB</span
-        ><span class="studio-logo">STUDIO</span>
-      </a>
-
+    <header class="page-header">
       <!--The navigation menu-->
       <nav>
-        <ul class="navbar lists">
+        <!--Page Logo-->
+        <a class="logo-link" href="./index.html"
+          ><span class="logo">WEB<span class="studio">STUDIO</span></span>
+        </a>
+        <ul class="nav-menu list">
           <li>
-            <a href="./index.html" class="pages currentoption">Studio</a>
+            <a href="./index.html" class="page current">Studio</a>
           </li>
           <li>
-            <a href="portfolio.html" class="pages">Portfolio</a>
+            <a href="portfolio.html" class="page">Portfolio</a>
           </li>
           <li>
-            <a href="./index.html" class="pages">Contacts</a>
+            <a href="./index.html" class="page">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <!--Inserting unordered list with hyperlink (mail and tel)-->
-      <ul class="contact-info lists">
+      <ul class="contacts-menu list">
         <li>
-          <a href="mailto:info@devstudio.com" class="info"
+          <a href="mailto:info@devstudio.com" class="item"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+110001111111" class="info">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111" class="item">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
@@ -53,63 +51,76 @@
     <!--This is the Main-->
     <main>
       <!--This is Section 1-->
-      <section class="section1 bg-section1">
-        <h1 class="h1-title">Effective Solutions<br />for Your Business</h1>
-        <button type="button" class="btn primary">Order Service</button>
+      <section class="hero bg-hero">
+        <h1 class="hero-title">Effective Solutions<br />for Your Business</h1>
+        <button type="button" class="button primary">Order Service</button>
       </section>
 
       <!--This is Section 2-->
-      <section clas="list-section">
-        <ul class="criteria lists">
-          <li>
-            <h3 class="titlelist">Strategy</h3>
-            <p class="desclist">
-              Our goal is to identify the business<br />problem to walk away
-              with the<br />perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="titlelist">Punctuality</h3>
-            <p class="desclist">
-              Bring the key message to the<br />brand's audience for the best
-              price<br />within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="titlelist">Diligence</h3>
-            <p class="desclist">
-              Research and confirm brands that<br />present the strongest
-              digital growth<br />opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="titlelist">Technologies</h3>
-            <p class="desclist">
-              Design practise focused on digital<br />experiences. We bring
-              forth a deep<br />passion for the problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <ul class="benefits list">
+            <li>
+              <h3 class="title">Strategy</h3>
+              <p class="description">
+                Our goal is to identify the business<br />problem to walk away
+                with the<br />perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Punctuality</h3>
+              <p class="description">
+                Bring the key message to the<br />brand's audience for the best
+                price<br />within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Diligence</h3>
+              <p class="description">
+                Research and confirm brands that<br />present the strongest
+                digital growth<br />opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Technologies</h3>
+              <p class="description">
+                Design practise focused on digital<br />experiences. We bring
+                forth a deep<br />passion for the problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--This is Section 3-->
-      <section class="section3">
-        <div>
-          <h2 class="sectiontitle">What Are We Doing</h2>
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">What Are We Doing</h2>
 
           <!--Inserting images-->
-          <ul class="services lists">
+          <ul class="what-we-do list">
             <li>
-              <img src="./images/img1.jpg" alt="monitor" width="300" />
+              <img
+                src="./images/img1.jpg"
+                alt="monitor"
+                width="360"
+                height="300"
+              />
             </li>
             <li>
-              <img src="./images/img2.jpg" alt="mobile" width="300" />
+              <img
+                src="./images/img2.jpg"
+                alt="mobile"
+                width="360"
+                height="300"
+              />
             </li>
             <li>
               <img
                 src="./images/img3.jpg"
                 alt="monitor and moble"
-                width="300"
+                width="360"
+                height="300"
               />
             </li>
           </ul>
@@ -117,30 +128,50 @@
       </section>
 
       <!--This is Section 4-->
-      <section class="section4">
-        <div>
-          <h2 class="sectiontitle">Our Team</h2>
+      <section class="section bg-team">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
 
           <!--Inserting images-->
-          <ul class="team lists">
+          <ul class="team list">
             <li>
-              <img src="./images/mark.jpg" alt="Mark Guerero" width="300" />
-              <h3 class="teamname">Mark Guerero</h3>
+              <img
+                src="./images/mark.jpg"
+                alt="Mark Guerero"
+                width="264"
+                height="260"
+              />
+              <h3 class="name">Mark Guerero</h3>
               <p class="position">Product Designer</p>
             </li>
             <li>
-              <img src="./images/tom.jpg" alt="Tom Ford" width="300" />
-              <h3 class="teamname">Tom Ford</h3>
+              <img
+                src="./images/tom.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="name">Tom Ford</h3>
               <p class="position">Frontend Developer</p>
             </li>
             <li>
-              <img src="./images/camila.jpg" alt="Camila Garcia" width="300" />
-              <h3 class="teamname">Camila Garcia</h3>
+              <img
+                src="./images/camila.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="name">Camila Garcia</h3>
               <p class="position">Marketing</p>
             </li>
             <li>
-              <img src="./images/daniel.jpg" alt="Daniel Wilson" width="300" />
-              <h3 class="teamname">Daniel Wilson</h3>
+              <img
+                src="./images/daniel.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="name">Daniel Wilson</h3>
               <p class="position">UI Designer</p>
             </li>
           </ul>
@@ -149,13 +180,12 @@
     </main>
 
     <!--This is the Footer-->
-    <footer class="bottompart footerbg">
+    <footer class="page-footer bg-footer">
       <div>
         <a href="./index.html" class="link-logo">
-          <span class="web-logo">WEB</span>
-          <span class="studio-logo2">STUDIO</span>
+          <span class="logo">WEB<span class="studio-footer">STUDIO</span></span>
         </a>
-        <p class="footerdesc">
+        <p class="footer-description">
           Increase the flow of customers and<br />sales for your business with
           digital<br />marketing & growth solutions.
         </p>
