--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <!--The navigation menu-->
       <nav>
         <!--Page Logo-->
-        <a class="logo-link" href="./index.html"
-          ><span class="logo">WEB<span class="studio">STUDIO</span></span>
+        <a class="logo-link" href="./index.html">
+          <span class="logo">WEB<span class="studio">STUDIO</span></span>
         </a>
         <ul class="nav-menu list">
           <li>
@@ -182,7 +182,7 @@
     <!--This is the Footer-->
     <footer class="page-footer bg-footer">
       <div>
-        <a href="./index.html" class="link-logo">
+        <a class="logo-link" href="./index.html">
           <span class="logo">WEB<span class="studio-footer">STUDIO</span></span>
         </a>
         <p class="footer-description">
