--- a/portfolio.html
+++ b/portfolio.html
@@ -187,7 +187,7 @@
 
     <footer class="page-footer bg-footer">
       <div>
-        <a href="./index.html" class="link-logo">
+        <a class="logo-link" href="./index.html">
           <span class="logo">WEB<span class="studio-footer">STUDIO</span></span>
         </a>
         <p class="footer-description">
