homework 2- revised2(css)

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GOIT-MARKUP-HW-02</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
@@ -17,8 +17,9 @@
       <!--The navigation menu-->
       <nav>
         <!--Page Logo-->
-        <a class="logo-link" href="./index.html"
-          ><span class="logo">WEB<span class="studio">STUDIO</span></span>
+        <a class="logo-link" href="./index.html">
+          <span class="logo">WEB</span>
+          <span class="studio">STUDIO</span>
         </a>
         <ul class="nav-menu list">
           <li>
@@ -188,7 +189,8 @@
     <footer class="page-footer bg-footer">
       <div>
         <a class="logo-link" href="./index.html">
-          <span class="logo">WEB<span class="studio-footer">STUDIO</span></span>
+          <span class="logo">WEB</span>
+          <span class="studio-footer">STUDIO</span>
         </a>
         <p class="footer-description">
           Increase the flow of customers and<br />sales for your business with
