--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GOIT-MARKUP-HW-02</title>
+    <title>Studio</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link
@@ -20,7 +20,8 @@
       <nav>
         <!--Page Logo-->
         <a class="logo-link" href="./index.html">
-          <span class="logo">WEB<span class="studio">STUDIO</span></span>
+          <span class="logo">WEB</span>
+          <span class="studio">STUDIO</span>
         </a>
         <ul class="nav-menu list">
           <li>
@@ -183,7 +184,8 @@
     <footer class="page-footer bg-footer">
       <div>
         <a class="logo-link" href="./index.html">
-          <span class="logo">WEB<span class="studio-footer">STUDIO</span></span>
+          <span class="logo">WEB</span>
+          <span class="studio-footer">STUDIO</span>
         </a>
         <p class="footer-description">
           Increase the flow of customers and<br />sales for your business with
